Veld kleuren toegevoegd

--- a/POC--grid-betting/index.html
+++ b/POC--grid-betting/index.html
@@ -14,7 +14,7 @@
     <div class="row">
       <div class="col-12">
         <div class="grid--container">
-          <table id="js-grid"><tbody><tr><td class="zone2"><input type="checkbox"></td>
+          <table id="js-grid"><tbody><tr class="lightgreen"><td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone1"><input type="checkbox"></td>
@@ -29,7 +29,7 @@
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
-</tr><tr><td class="zone2"><input type="checkbox"></td>
+</tr><tr class="lightgreen"><td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone1"><input type="checkbox"></td>
@@ -44,7 +44,7 @@
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
-</tr><tr><td class="zone2"><input type="checkbox"></td>
+</tr><tr class="darkgreen"><td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone1"><input type="checkbox"></td>
@@ -59,7 +59,7 @@
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
-</tr><tr><td class="zone2"><input type="checkbox"></td>
+</tr><tr class="darkgreen"><td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
@@ -74,7 +74,7 @@
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
-</tr><tr><td class="zone2"><input type="checkbox"></td>
+</tr><tr class="lightgreen"><td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
@@ -89,7 +89,7 @@
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
 <td class="zone2"><input type="checkbox"></td>
-</tr><tr><td class="zone3"><input type="checkbox"></td>
+</tr><tr class="lightgreen"><td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
@@ -104,7 +104,7 @@
 <td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
-</tr><tr><td class="zone3"><input type="checkbox"></td>
+</tr><tr class="darkgreen"><td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
@@ -119,7 +119,7 @@
 <td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
-</tr><tr><td class="zone3"><input type="checkbox"></td>
+</tr><tr class="darkgreen"><td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
@@ -134,7 +134,7 @@
 <td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
-</tr><tr><td class="zone3"><input type="checkbox"></td>
+</tr><tr class="lightgreen"><td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
@@ -149,7 +149,7 @@
 <td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
-</tr><tr><td class="zone3"><input type="checkbox"></td>
+</tr><tr class="lightgreen"><td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
 <td class="zone3"><input type="checkbox"></td>
